--- a/QuanLyNhanSu/bin/QuanLyNhanSu.dll.config
+++ b/QuanLyNhanSu/bin/QuanLyNhanSu.dll.config
@@ -62,6 +62,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=DESKTOP-J7O9C86;initial catalog=QLNhanSu;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-3S04DI6;initial catalog=QLNhanSu;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
